--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
     <link rel="stylesheet" href="/style.css" />
     <script src="/script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div id="etchFrame">
+        <div id="etchScreen"></div>
+        <div id="controls"></div>
+      </div>
+    </div>
+  </body>
 </html>
