--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <div id="etchScreen">
           <!-- <div id="gridContainer"></div> -->
         </div>
-        <div id="controls"></div>
+        <div id="controls">
+          <button id="gridSize">Change Grid Size</button>
+        </div>
       </div>
     </div>
   </body>
