add working draw & resize

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
   <body>
     <div class="container">
       <div id="etchFrame">
-        <div id="etchScreen">
-          <!-- <div id="gridContainer"></div> -->
-        </div>
+        <div id="etchScreen"></div>
         <div id="controls">
           <button id="gridSize">Change Grid Size</button>
         </div>
